syntax = "proto3";
import "ua/anastasiia/finesapp/commonmodels/fine/fine.proto";
package ua.anastasiia.finesapp.output.pubsub.violation;
option java_multiple_files = true;
option java_package = "ua.anastasiia.finesapp.output.pubsub.violation";

message ViolationDeletedEvent {
  commonmodels.fine.Fine fine = 1;
}
